--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,38 @@
 .map-container {
   position: absolute;
-  top: 0;
-  bottom: 0;
+  top: 215px;
+  bottom: 215px;
+  border-radius: 15px;
+  margin:  0 10%;
   left: 0;
   right: 0;
 }
 
+.app-header {
+  background-color: #222;
+  height: 50vh;
+  padding: 20px;
+  color: white;
+  text-align: center;
+  font-size: x-large;
+}
 
-.sidebar {
-background-color: rgba(35, 55, 75, 0.9);
-color: #fff;
-padding: 6px 12px;
-font-family: monospace;
+.toggle-group {
 z-index: 1;
 position: absolute;
-top: 0;
-left: 0;
-margin: 12px;
-border-radius: 4px;
+top: 220px;
+margin: 0 11%;
+}
+
+.legend {
+z-index: 1;
+position: absolute;
+bottom: 215px;
+right: 10%;
 }
 
 .mapboxgl-ctrl-geocoder {
-    width: 500px!important;
+    width: 300px;
 }
 
 body {
