Added minor header tweaks

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,11 @@ h1 {
   font-size: x-large;
 }
 
+a {
+    color: #0000dd;
+    text-decoration: underline;
+}
+
 .toggle-group {
 z-index: 1;
 position: absolute;
